Added survey activity which takes the user input and opens a new activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="intro_text">Please enter the survey ID</string>
     <string name="survey_name">Enter Survey Name</string>
     <string name="begin_survey">Begin Survey</string>
+    <string name="survey_activity_label">Test label here</string>
 </resources>
